mobile view overflow fixed

--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+} */
 body{
   font-size: 16px;
   background: hsl(0, 0%, 97%);
@@ -18,7 +26,7 @@ body{
   background-size:cover;
   height: 60vh;
   top: 0;
-  position: relative;
+  /* position: relative; */
   z-index: 1;
 }
 .header{
@@ -183,6 +191,7 @@ p{
   padding:30px 25px;
   margin-bottom: 25px;
 }
+
 .edition-row h2{
   font-size: 18px;
   font-weight: 700;
@@ -229,14 +238,16 @@ small{
   top:0;
   width: 100%;
   height: 100%;
-  visibility: hidden;
+  display: none;
+  /* visibility: hidden; */
   margin: auto;
   overflow-y: scroll;
   overflow-x: hidden;
   position: fixed;
-  right:0;
+  /* right:0; */
   z-index: 2;
 }
+
 .overlay{
   /* display: none; */
   position: relative;
@@ -262,32 +273,41 @@ small{
   font-size: 14px;
   letter-spacing: 1.5px;
 }
+
 .edition-row p{
 letter-spacing: 0.5px;
 }
-.mahogamy{
+.mahogany{
   opacity: 0.5;
  }
 .radio-btn{
   display: flex;
-  align-items: flex-start;
   justify-content: flex-start;
+  /* align-items: flex-start;
+  justify-content: flex-start; */
 }
-.radio-btn h2{
+label{
+  font-weight: 700;
+  font-size: 14px;
+}
+/*.radio-btn h2{
   font-size: 16px;
   margin-right: 20px;
-}
-.radio-btn h3{
-  margin-left: 40%;
-  
-}
-.modal h2:hover{
+} */
+
+label:hover{
   color: hsl(176, 50%, 47%);
   cursor: pointer;
 }
 .radio-btn span{
   color: hsl(176, 50%, 47%);
-  opacity: 1;
+  font-weight: 600;
+  margin-left: 20px;
+}
+.radio-btn h3{
+  margin-left: 50%;
+  font-size: 14px;
+  
 }
 .radio-btn small{
   margin-left: 5px;
@@ -350,7 +370,7 @@ input{
 }
 .support{
   background-color: hsl(0, 0%, 100%);
-  width: 500px;
+  width: 100%;
   position: absolute;
   padding: 30px;
   text-align: center;
@@ -366,15 +386,18 @@ input{
 
 
 @media screen and (max-width:800px) {
+
   .menu{
     display: block;
   }
   .container{
     background-image: url('images/image-hero-mobile.jpg');
-    width: 100%;
+    max-width: 100%;
+    min-width: fit-content;
     background-size: cover;
     /* height: 50vh; */
     top: 0;
+    
   }
   nav{
     display: none;
@@ -399,7 +422,7 @@ input{
   .small-container{
     display: flex;
     flex-direction: column;
-    max-width: 100%;
+    width: 100%;
     min-width: fit-content;
     margin:  auto;
     position: absolute;
@@ -427,7 +450,6 @@ input{
     flex-direction: column;
     width: 320px;
     align-items: center;
-    margin-right: 0px;
   }
   hr{
     border: 1px solid hsl(0, 0%, 48%);
@@ -502,7 +524,7 @@ input{
     position: absolute;
     align-items: center;
     z-index: 4;
-    height: 100cm;
+    height: 80cm;
     /* visibility: hidden; */
   } 
  
